--- a/info_en.html
+++ b/info_en.html
@@ -103,19 +103,23 @@
             background-color: transparent; 
             color: white;
         }
+		.hr-washed {
+	    margin: 15px 0;
+	    padding: 0;
+	    height: 0;
+	    border: none;
+	    box-shadow: 0 0 2px 0.2px white;
+}
 		</style>
 </head>
 <body>
-
 <header>
         <a class="button header2" href="home_en.html">Home</a>
 		<a class="button header2" href="help_en.html">Help</a>
 		<a class="button header2 hovering" href="info_en.html">Info</a>
 		<a class="button header2" href="info_ru.html">Русский</a>
     </header>
-	</main>
-	 <h1 class="title">Info</h1>
-	</main>
+	<h1 class="title">Info</h1>
 	<h2 align="center">Main information</h2>
 	<center-left>
 	<h2>This game was created by fan developers for entertainment purposes only, not approved by Mojang Studios!</h2>
@@ -130,7 +134,6 @@
 	<h3>Память: 1-3GB free space<h3>
 	<h3>Видео: DirectX 9 and higher support with OpenGL ES 3.1 (2.1 Experimental)<h3>
 	</center-left>
-    </main>
     <footer>
         <p class="footer">Copyright 2024<i class="fa-regular fa-copyright"></i></p>
     </footer>
