--- a/info_en.html
+++ b/info_en.html
@@ -117,9 +117,13 @@
         <a class="button header2" href="home_en.html">Home</a>
 		<a class="button header2" href="help_en.html">Help</a>
 		<a class="button header2 hovering" href="info_en.html">Info</a>
-		<a class="button header2" href="info_ru.html">Русский</a>
+        <a class="button header2" href="info_ru.html">Русский</a>
     </header>
+	</main>
+	 <header>
+	<main>
 	<h1 class="title">Info</h1>
+	</main>
 	<h2 align="center">Main information</h2>
 	<center-left>
 	<h2>This game was created by fan developers for entertainment purposes only, not approved by Mojang Studios!</h2>
@@ -129,10 +133,10 @@
     <h2 align="center">Game Specifications</h2>
     <center-left>
 	<h3>OS: Windows 7 and above</h3>
-	<h3>CPU: 2x1 Ghz  and above, x32 and x64</h3>
+	<h3>CPU: 2x1 Ghz and above, x32 and x64</h3>
 	<h3>RAM: 1GB and above</h3>
-	<h3>Память: 1-3GB free space<h3>
-	<h3>Видео: DirectX 9 and higher support with OpenGL ES 3.1 (2.1 Experimental)<h3>
+	<h3>Memory: 1-3GB free space<h3>
+	<h3>Video: DirectX 9 and higher support with OpenGL ES 3.1 (2.1 Experimental)<h3>
 	</center-left>
     <footer>
         <p class="footer">Copyright 2024<i class="fa-regular fa-copyright"></i></p>
