--- a/help_en.html
+++ b/help_en.html
@@ -112,11 +112,32 @@
 		<a class="button header2 hovering" href="help_en.html">Help</a>
 		<a class="button header2" href="info_en.html">Info</a>
 		<a class="button header2" href="help_ru.html">Русский</a>
-    </header>
+	</header>
 	</main>
-	   <h1 class="title">Sorry... Page under construction</h1>
-    </main>
-    <footer>
+	 <header>
+     <h1 class="title">Help</h1>
+	</main>
+	<h2 align="center">How to play if I get a notification when I enter the game?</h2>
+	<center-left>
+	<h3>In the upper right corner there will be a "Play" button, clicking on it will take you to the game menu.</h3>
+	</center-left>
+    <h2 align="center">How to play online?</h2>
+    <center-left>
+	<h2>Connecting to a friend's game > Radmin VPN</h2>
+	<h3>You can try to play through Radmin, since this procedure takes very little time.</h3>
+	<h3>Create a network or join a network if your friend created one.</h3>
+	<h3>A friend creates a world and opens the world to the network, but in this version, opening the world to the network is needed.</h3>
+	<h3>And for someone else to connect, there is a separate point. Under the “Show My Worlds” tab.</h3>
+	<h3>Join the game/world, enter the IP address of the RadMine network, I remind you not your IP but a friend.</h3>
+	</center-left>
+	<h2 align="center">How to install a skin for yourself?</h2>
+	<center-left>
+	<h3>This is unfortunately not entirely simple. Regarding installing skins, you need to download the skin pack "SkinPack""<h3>
+	<h3>You can create your own using programs for PC skins or via websites.</h3>
+	<h3>Once created, move along the path - C:\Users\Пользователь\AppData\Roaming\OptiCraft\games\com.mojang\skin_packs</h3>
+	<h3>And that’s it, now you can install the skin in your game</h3>
+	</center-left>
+  <footer>
         <p class="footer">Copyright 2024<i class="fa-regular fa-copyright"></i></p>
     </footer>
 	</body>
