--- a/help_ru.html
+++ b/help_ru.html
@@ -114,8 +114,29 @@
         <a class="button header2" href="help_en.html">English</a>
     </header>
 	</main>
-	   <h1 class="title">Простите... Страница в разработке</h1>
-    </main>
+	 <header>
+	 <h1 class="title">Помощь</h1>
+	</main>
+	<h2 align="center">Как играть если при заходе в игру уведомление?</h2>
+	<center-left>
+	<h3>В правом верхнем углу будет кнопка "Play", нажимая на её вы переноситесь в игровое меню.</h3>
+	</center-left>
+    <h2 align="center">Как играть по сети в игру?</h2>
+    <center-left>
+	<h3>Подключение к игре друга > Radmine VPN</h3>
+	<h3>Можно попробываеть поиграть через Radmine, так как эта процедура занимает очень мало времени.</h3>
+	<h3>Создать сеть или присоединиться к сети если твой друг создал её.</h3>
+	<h3>Друг создает мир и открывает мир для сети, да на этой версии открытие мира для сети нужна.</h3>
+	<h3>А чтобы другой подключился, есть отдельный пункт. Под вкладкой "Показать мои миры".</h3>
+	<h3>Присоединится к игре/миру, там вводите айпи адресс сети RadMine, напоминаю не свой айпи	а друга.</h3>
+	</center-left>
+	<h2 align="center">Как установить скин себе?</h2>
+	<center-left>
+	<h3>Это ксожелению не совсем просто. По поводу установки скинов, нужно скачивать пак скином "SkinPack"</h3>
+	<h3>Можно свой создать с помощью программ для пк скинов или через сайтов.</h3>
+	<h3>После создания перенесите по пути - C:\Users\Пользователь\AppData\Roaming\OptiCraft\games\com.mojang\skin_packs</h3>
+	<h3>И всё, теперь можно в своей игре установить скин</h3>
+	</center-left>
     <footer>
         <p class="footer">Copyright 2024<i class="fa-regular fa-copyright"></i></p>
     </footer>
