--- a/versions_ru.html
+++ b/versions_ru.html
@@ -119,18 +119,19 @@
 <body>
 <header>
         <a class="button header2" href="home_ru.html">Вернутся</a>
+		<a class="button header2" href="versions_en.html">English</a>
 	<header>
 	<main>
 	<h1 class="title">Выберите версию</h1>
 	</main>
 	<h1 align="left">Opticraft 1.19.52</h1>
 	<center-left><h2>Перeйти к скачиванию версии 1.19.52</h2>
-	<a class="button header2" href="download_ru.html">Скачать</a>
+	<a class="button header2" href="11952_ru.html">Скачать</a>
 	</center-left>
 <hr class="hr-washed">
-	<h1 align="left">Opticraft 1.20.10 (Скоро)</h1>
-	<center-left><h2>Пока что нет в наличии</h2>
-	<a class="button header2">Скоро</a>
+	<h1 align="left">Opticraft 1.20.10 (Бета)</h1>
+	<center-left><h2>Перeйти к скачиванию версии 1.20.10</h2>
+	<a class="button header2"href="12010_ru.html">Скачать</a>
 	</center-left>
 	 <footer>
         <p class="footer">Copyright 2024<i class="fa-regular fa-copyright"></i></p>
