--- a/home_ru.html
+++ b/home_ru.html
@@ -114,7 +114,7 @@
         <a class="button header2" href="home_en.html">English</a>
     </header>
 	</main>
-	   <h1 class="title">Opticraft</h1>
+	   <h1 class="title">OptiCraft</h1>
 	   <h3 class="title2">Minecraft Bedrock для Windows</h3>
         <center>
 		<a class="button header2" href="versions_ru.html">Перейти</a>
