--- a/home_en.html
+++ b/home_en.html
@@ -114,7 +114,7 @@
         <a class="button header2" href="home_ru.html">Русский</a>
     </header>
 	</main>
-	   <h1 class="title">Opticraft</h1>
+	   <h1 class="title">OptiCraft</h1>
 	   <h3 class="title2">Minecraft Bedrock for Windows</h3>
         <center>
 		<a class="button header2" href="versions_en.html">Go</a>
