--- a/info_ru.html
+++ b/info_ru.html
@@ -128,7 +128,7 @@
 	<h2 align="center">Основная инфа</h2>
 	<center-left>
 	<h2>Данная игра создана фан разработчиками исклютельно в развлекательных целях, не одобрено Mojang Studios!</h2>
-    <h2>Это модифицированная игра Minecraft Education Edition и не поставляется оригинальной игрок Minecraft Bedrock Editon/Windows 10 Edition</h2>
+    <h2>Это модифицированная игра Minecraft Education Edition и не поставляется оригинальной игрой Minecraft Bedrock Editon/Windows 10 Edition</h2>
 	</center-left>
 <hr class="hr-washed">
     <h2 align="center">Характеристики для игры</h2>
