--- a/info_en.html
+++ b/info_en.html
@@ -127,7 +127,7 @@
 	<h2 align="center">Main information</h2>
 	<center-left>
 	<h2>This game was created by fan developers for entertainment purposes only, not approved by Mojang Studios!</h2>
-    <h2>This is a modified game of Minecraft Education Edition and does not come with the original Minecraft Bedrock Editon/Windows 10 Edition player</h2>
+    <h2>This is a modified Minecraft Education Edition game and does not come with the original Minecraft Bedrock Editon/Windows 10 Edition game.</h2>
 	</center-left>
 <hr class="hr-washed">
     <h2 align="center">Game Specifications</h2>
