--- a/help_en.html
+++ b/help_en.html
@@ -134,7 +134,7 @@
 	<center-left>
 	<h3>This is unfortunately not entirely simple. Regarding installing skins, you need to download the skin pack "SkinPack""<h3>
 	<h3>You can create your own using programs for PC skins or via websites.</h3>
-	<h3>Once created, move along the path - C:\Users\Пользователь\AppData\Roaming\OptiCraft\games\com.mojang\skin_packs</h3>
+	<h3>Once created, move along the path - C:\Users\User\AppData\Roaming\OptiCraft\games\com.mojang\skin_packs</h3>
 	<h3>And that’s it, now you can install the skin in your game</h3>
 	</center-left>
   <footer>
