--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>OptiCraft</title>
+    <title>OptiCraft | Сайт по Minecraft Bedrock</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="icon.jpg" type="image/x-icon">
     <script defer src="script.js"></script>
