--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <p>&copy; OptiCraftSu 2024 | Не связано и не одобрено Mojang</p>
         <div class="footer-controls">
 		    <button class="telegram-btn" onclick="window.location.href='https://t.me/opticraftsu';">Telegram</button>
-			<a class="telegram-btn"  onclick="window.location.href='https://opticarftsu.github.io/legacy';">Legacy</a>
+			<a class="telegram-btn"  onclick="window.location.href='https://opticraftsu.github.io/legacy';">Legacy</a>
             <button id="theme-toggle">Сменить тему</button>
         </div>
     </footer>
