--- a/Downloads/index.html
+++ b/Downloads/index.html
@@ -385,7 +385,7 @@
 </head>
 <body>
     <header>
-        <a href="#" class="logo"><img src="icon.jpg" alt="Cube">OptiCraft</a>
+        <a onclick="window.location.href='https://opticraftsu.github.io/';" class="logo"><img src="icon.jpg" alt="Cube">OptiCraft</a>
         <nav>
             <button class="menu-button">☰</button>
             <div class="menu">
