--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
 			<h4>Неофицальный порт Minecraft Bedrock Editoon на Windows<h4>
 			<h5 class="text-gray">⚠️ Данный порт сделан на основе Minecraft Education Edition и не является оригинальной игрой!<h5>
             <div class="hero-buttons">
-                <a href="#">Скачать</a>
+                <a onclick="window.location.href='https://opticraftsu.github.io/Downloads';">Скачать</a>
                 <a onclick="window.location.href='https://opticraftsu.github.io/legacy';">Legacy</a>
                 <a onclick="window.location.href='https://t.me/opticraftsu';">Telegram</a>
             </div>
