--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 					<li><a onclick="window.location.href='https://opticraftsu.github.io/Info';">Информация</a></li>
                     <li><a onclick="window.location.href='https://opticraftsu.github.io/News';">Новости</a></li>
 					<li><a onclick="window.location.href='https://opticraftsu.github.io/404';">Релизы</a></li>
-                    <li><a onclick="window.location.href='https://opticraftsu.github.io/Download';">Скачать</a></li>
+                    <li><a onclick="window.location.href='https://opticraftsu.github.io/Downloads';">Скачать</a></li>
 					<p align="center" class="text-lime">FAQ</p>
 					<li><a onclick="window.location.href='https://opticraftsu.github.io/404';">Вопросы</a></li>
 					<li><a onclick="window.location.href='https://opticraftsu.github.io/404';">Разные Вопросы</a></li>
