--- a/Downloads/index.html
+++ b/Downloads/index.html
@@ -9,12 +9,12 @@
     <style>
         @font-face {
             font-family: 'Minecraftia';
-            src: url('Fonts/font.ttf');
+            src: url('fonts/font.ttf');
         }
 
         @font-face {
             font-family: 'Minecraft';
-            src: url('Fonts/font2.ttf');
+            src: url('fonts/font2.ttf');
         }
 		
         :root {
@@ -385,7 +385,7 @@
 </head>
 <body>
     <header>
-        <a onclick="window.location.href='https://opticraftsu.github.io/';" class="logo"><img src="icon.jpg" alt="Cube">OptiCraft</a>
+        <a href="#" class="logo"><img src="icon.jpg" alt="Cube">OptiCraft</a>
         <nav>
             <button class="menu-button">☰</button>
             <div class="menu">
@@ -421,36 +421,46 @@
     </div>
     <ul id="version-list" class="version-list">
         <li class="version-item font-text" data-version="version-1-12">OptiCraft 1.12</li>
-        <li class="version-item font-text" data-version="version-1-16">OptiCraft 1.16</li>
         <li class="version-item font-text" data-version="version-1-17">OptiCraft 1.17</li>
+        <li class="version-item font-text" data-version="version-1-18">OptiCraft 1.18</li>
         <li class="version-item font-text" data-version="version-1-19">OptiCraft 1.19</li>
         <li class="version-item font-text" data-version="version-1-20">OptiCraft 1.20</li>
+		<li class="version-item font-text" data-version="version-1-21">OptiCraft 1.21</li>
     </ul>
     <div id="version-1-12" class="download-section">
         <h2>OptiCraft 1.12</h2>
-        <p>Скачайте версию 1.12 - Пока что не доступно</p>
-        <button class="back-btn">Назад</button>
-    </div>
-    <div id="version-1-16" class="download-section">
-        <h2>OptiCraft 1.16</h2>
-        <p>Скачайте версию 1.16 - Пока что не доступно</p>
+        <p>Скачайте версию 1.12.0</p>
+		<button class="download-btn" onclick="window.location.href='https://drive.google.com/file/d/1ufioTVGrUP405M4HFurE-7FjAuyQkrM2/view?usp=sharing';">Скачать 1.12</button>
         <button class="back-btn">Назад</button>
     </div>
     <div id="version-1-17" class="download-section">
         <h2>OptiCraft 1.17</h2>
-        <p>Скачайте версию 1.17 - Пока что не доступно</p>
+        <p>Скачайте версию 1.17.30</p>
+		<button class="download-btn" onclick="window.location.href='https://drive.google.com/file/d/1RkMn2_qRWRzzYzSCltPyDh5qKlQ7Tzry/view?usp=sharing';">Скачать 1.17</button>
+        <button class="back-btn">Назад</button>
+    </div>
+    <div id="version-1-18" class="download-section">
+        <h2>OptiCraft 1.18</h2>
+        <p>Скачайте версию 1.18.31</p>
+		<button class="download-btn" onclick="window.location.href='https://drive.google.com/file/d/1KK8Xt3i9w2zn_uh9DnAWESvcC5DiUdOd/view?usp=sharing';">Скачать 1.18</button>
         <button class="back-btn">Назад</button>
     </div>
     <div id="version-1-19" class="download-section">
         <h2>OptiCraft 1.19</h2>
-        <p>Скачайте версию 1.19</p>
+        <p>Скачайте версию 1.19.52</p>
         <button class="download-btn" onclick="window.location.href='https://drive.google.com/file/d/172YASqq8GdA_ZxaJ-mx2NbyCU_vqvha1/view?usp=sharing';">Скачать 1.19</button>
         <button class="back-btn">Назад</button>
     </div>
     <div id="version-1-20" class="download-section">
         <h2>OptiCraft 1.20</h2>
-        <p>Скачайте версию 1.20 (Бета)</p>
-        <button class="download-btn" onclick="window.location.href='https://drive.google.com/file/d/1CY7xHJaceCrxlVPE0mKadTwIPpQuRo_F/view?usp=sharing';">Скачать 1.20</button>
+        <p>Скачайте версию 1.20.10</p>
+        <button class="download-btn" onclick="window.location.href='https://drive.google.com/file/d/1v2lAnot5UTnfvmTbbLrFgh4ypvZ60UmT/view?usp=sharing';">Скачать 1.20</button>
+        <button class="back-btn">Назад</button>
+    </div>
+    <div id="version-1-21" class="download-section">
+        <h2>OptiCraft 1.21</h2>
+        <p>Скачайте версию 1.21.50 (Бета)</p>
+        <button class="download-btn" onclick="window.location.href='https://drive.google.com/file/d/1KhjF8ZlGFPzcblKUD_YKyjP7mS1X1FJZ/view?usp=sharing';">Скачать 1.21</button>
         <button class="back-btn">Назад</button>
     </div>
 </section>
