--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 	<p>Можете ознакомится с релизами или перейди к скачиванию</p>
 	<div class="hero-buttons">
     <a onclick="window.location.href='https://opticraftsu.github.io/404';">Релизы</a>
-	<a onclick="window.location.href='https://opticraftsu.github.io/Downloads">Скачать</a>
+	<a onclick="window.location.href='https://opticraftsu.github.io/Downloads';">Скачать</a>
 	</div>
 	</section>
     <footer>
