--- a/404/index.html
+++ b/404/index.html
@@ -251,7 +251,7 @@
             <div class="menu">
                 <ul>
 				    <h4 align="center" class="text-lime">Категории</h4>
-                    <li><a onclick="window.location.href='https://opticraftsu.github.io/';"Главное</a></li>
+                    <li><a onclick="window.location.href='https://opticraftsu.github.io/';">Главное</a></li>
 					<p align="center" class="text-lime">Документация</p>
 					<li><a onclick="window.location.href='https://opticraftsu.github.io/Info';">Информация</a></li>
                     <li><a onclick="window.location.href='https://opticraftsu.github.io/News';"Новости</a></li>
