--- a/404/index.html
+++ b/404/index.html
@@ -254,7 +254,7 @@
                     <li><a onclick="window.location.href='https://opticraftsu.github.io/';">Главное</a></li>
 					<p align="center" class="text-lime">Документация</p>
 					<li><a onclick="window.location.href='https://opticraftsu.github.io/Info';">Информация</a></li>
-                    <li><a onclick="window.location.href='https://opticraftsu.github.io/News';"Новости</a></li>
+                    <li><a onclick="window.location.href='https://opticraftsu.github.io/News';">Новости</a></li>
 					<li><a onclick="window.location.href='https://opticraftsu.github.io/404';">Релизы</a></li>
                     <li><a onclick="window.location.href='https://opticraftsu.github.io/Downloads';">Скачать</a></li>
 					<p align="center" class="text-lime">FAQ</p>
