--- a/404/index.html
+++ b/404/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="icon" href="icon.jpg" type="image/x-icon">
+	<link rel="icon" href="icon.png" type="image/x-icon">
     <title>404: Not Found | OpticraftSu</title>
     <style>
         @font-face {
@@ -47,6 +47,8 @@
         }
 
         .logo {
+		    font-family: 'Minecraft';
+            src: url('Fonts/font2.ttf');
             font-size: 1.1rem;
             color: var(--text-color);
             text-decoration: none;
@@ -245,7 +247,7 @@
 </head>
 <body>
     <header>
-        <a onclick="window.location.href='https://opticraftsu.github.io/';" class="logo"><img src="icon.jpg" alt="Cube">OptiCraft</a>
+        <a onclick="window.location.href='https://opticraftsu.github.io/';" class="logo"><img src="icon.png" alt="Cube">OptiCraft</a>
         <nav>
             <button class="menu-button">☰</button>
             <div class="menu">
