--- a/Downloads/index.html
+++ b/Downloads/index.html
@@ -471,6 +471,7 @@
         <p>Скачайте версию 1.21.50 или 1.21.90 (Бета)</p>
         <button class="download-btn" onclick="window.location.href='https://drive.google.com/file/d/1KhjF8ZlGFPzcblKUD_YKyjP7mS1X1FJZ/view?usp=sharing';">Скачать 1.21.50</button>
 	<button class="download-btn" onclick="window.location.href='https://drive.google.com/file/d/1Zd95-l_qDCRBkWqZNAi_B33JShmoCMC9/view?usp=sharing';">Скачать 1.21.90 beta 1</button>
+  <button class="download-btn" onclick="window.location.href='https://drive.google.com/file/d/1Zd95-l_qDCRBkWqZNAi_B33JShmoCMC9/view?usp=sharing';">Скачать 1.21.90 beta 1</button>
         <button class="back-btn">Назад</button>
     </div>
 </section>
